--- a/themes/sondo/layouts/index.html
+++ b/themes/sondo/layouts/index.html
@@ -2,9 +2,7 @@
 <main class="homepage container py-6">
   <!-- Hero -->
   <div class="hero row">
-    <div
-      class="col position-relative py-lg-7{{ if not .Site.Params.homepageImage }} py-7{{ else }} pb-5{{ end }}"
-    >
+    <div class="col position-relative py-lg-7{{ if not .Site.Params.homepageImage }} py-7{{ else }} pb-5{{ end }}">
       {{- with .Site.Params.homepageImage -}}
       <div class="homepage-image">
         <img src="{{ . | relURL }}" class="img-fluid" />
@@ -19,47 +17,41 @@
   </div>
 
   <div class="row py-lg-5">
-      <div class="col-auto mx-auto">
-        <img src="/images/kepsek.png" class="img-fluid rounded" alt="Kepala sekolah SD Negeri Sondo" />
+    <div class="col-auto mx-auto">
+      <img src="/images/kepsek.png" class="img-fluid rounded" alt="Kepala sekolah SD Negeri Sondo" />
+    </div>
+    <div class="col">
+      <div class="card-block px-2">
+        <h4 class="card-title">Sambutan Kepala Sekolah</h4>
+        <p class="card-text">
+          Di era globalisasi dan pesatnya teknologi informasi, tidak bisa
+          dipungkiri bahwa keberadaan sebuah website untuk suatu instansi atau
+          organisasi termasu SD Negeri Sondo Kecamatan Monta Kabupaten Bima
+          Nusa Tenggara Barat sangatlah penting. Kerena wahana website ini
+          dapat digunakan sebagai media penyebarluasan informasi-informasi
+          dari sekolah untuk Siswa, Masyarakat dan pihak terkait secara mudah.
+        </p>
+        <a class="d-block" href="/sambutan-kepsek/">Selengkapnya ...</a>
       </div>
-      <div class="col">
-        <div class="card-block px-2">
-          <h4 class="card-title">Sambutan Kepala Sekolah</h4>
-          <p class="card-text">
-            Di era globalisasi dan pesatnya teknologi informasi, tidak bisa
-            dipungkiri bahwa keberadaan sebuah website untuk suatu instansi atau
-            organisasi termasu SD Negeri Sondo Kecamatan Monta Kabupaten Bima
-            Nusa Tenggara Barat sangatlah penting. Kerena wahana website ini
-            dapat digunakan sebagai media penyebarluasan informasi-informasi
-            dari sekolah untuk Siswa, Masyarakat dan pihak terkait secara mudah.
-          </p>
-          <a class="d-block" href="/sambutan-kepsek/">Selengkapnya ...</a>
-        </div>
-      </div>
+    </div>
   </div>
 
   <!-- Latest article -->
-  {{- range first 1 (where .Site.RegularPages "Type" "in"
-  .Site.Params.mainSections) -}} {{ $page := . }}
+  {{- range first 1 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) -}} {{ $page := . }}
   <div class="latest row py-lg-5">
     <div class="col-lg-6 mb-3">
-      {{- with $page.Params.images -}} {{- $images := . -}} {{- with
-      $page.Site.GetPage "section" "images" -}} {{- with .Resources.GetMatch
-      (strings.TrimPrefix "/images/" (index $images 0)) -}} {{- $image := .Fill
-      "700x450" -}}
+      {{- with $page.Params.images -}} {{- $images := . -}} 
+      {{- with $page.Site.GetPage "section" "images" -}} 
+      {{- with .Resources.GetMatch (strings.TrimPrefix "/images/" (index $images 0)) -}} 
+      {{- $image := .Fill "700x450" -}}
       <a href="{{ $page.RelPermalink }}" class="d-block">
-        <img
-          data-src="{{ $image.RelPermalink }}"
-          class="img-fluid rounded"
-          alt="{{ $page.Title }}"
-        />
+        <img data-src="{{ $image.RelPermalink }}" class="img-fluid rounded" alt="{{ $page.Title }}" />
       </a>
       {{- end -}} {{- end -}} {{- end -}}
     </div>
     <div class="col-lg-6 mb-3">
       <h5 class="created text-muted text-uppercase font-weight-bold">
-        {{ $page.Date.Format (.Site.Params.dateFormat | default "January 2,2006"
-        ) }}
+        {{ $page.Date.Format (.Site.Params.dateFormat | default "January 2,2006" ) }}
       </h5>
       <h2><a href="{{ $page.RelPermalink }}">{{ $page.Title }}</a></h2>
 
@@ -70,9 +62,10 @@
 
   <!-- Articles -->
   <div class="articles row row-cols-1 row-cols-lg-3">
-    {{ range after 1 (where .Site.RegularPages "Type" "in"
-    .Site.Params.mainSections) }}
-    <div class="col mb-3">{{ .Render "card" }}</div>
+    {{ range after 1 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
+        <div class="col mb-3">
+            {{ .Render "card" }}
+        </div>
     {{ end }}
   </div>
 </main>
