--- a/themes/sondo/layouts/index.html
+++ b/themes/sondo/layouts/index.html
@@ -5,7 +5,7 @@
     <div class="col position-relative py-lg-7{{ if not .Site.Params.homepageImage }} py-7{{ else }} pb-5{{ end }}">
       {{- with .Site.Params.homepageImage -}}
       <div class="homepage-image">
-        <img src="{{ . | relURL }}" class="img-fluid" />
+        <img src="{{ . | relURL }}" class="img-fluid rounded" />
       </div>
       {{- end -}}
 
@@ -18,20 +18,20 @@
 
   <div class="row py-lg-5">
     <div class="col-auto mx-auto">
-      <img src="/images/kepsek.png" class="img-fluid rounded" alt="Kepala sekolah SD Negeri Sondo" />
+      <img src="/images/kepsek.jpeg" class="img-fluid rounded" alt="Kepala sekolah SD Negeri Sondo" />
     </div>
     <div class="col">
       <div class="card-block px-2">
-        <h4 class="card-title">Sambutan Kepala Sekolah</h4>
+        <h4 class="card-title">Mahfud S.Pd.</h4>
         <p class="card-text">
           Di era globalisasi dan pesatnya teknologi informasi, tidak bisa
           dipungkiri bahwa keberadaan sebuah website untuk suatu instansi atau
-          organisasi termasu SD Negeri Sondo Kecamatan Monta Kabupaten Bima
+          organisasi termasuk SD Negeri Sondo Kecamatan Monta Kabupaten Bima
           Nusa Tenggara Barat sangatlah penting. Kerena wahana website ini
           dapat digunakan sebagai media penyebarluasan informasi-informasi
           dari sekolah untuk Siswa, Masyarakat dan pihak terkait secara mudah.
         </p>
-        <a class="d-block" href="/sambutan-kepsek/">Selengkapnya ...</a>
+        <a href="/sambutan-kepsek/">Selengkapnya ...</a>
       </div>
     </div>
   </div>
